<resources>
    <string name="app_name">Assignment2</string>
    <string name="upload_cover_photo">Upload Cover Photo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="get_started">Get Started</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
</resources>
